2006-06-26  Jim Meyering  <jim@meyering.net>

	* NEWS: rm no longer fails to remove an empty, unreadable directory
	* src/remove.c (remove_cwd_entries): If we can't open a directory,
	and the failure is not being ignored, try to remove the directory
	with rmdir (aka unlinkat-with-AT_REMOVEDIR), in case it's empty.
	Problem report and test case from Paul Eggert in
	<http://article.gmane.org/gmane.comp.gnu.core-utils.bugs/7425>.
	* tests/rm/empty-inacc: New test, for the above.

	Avoid a segfault for wc --files0=- < /dev/null.
	* src/wc.c (compute_number_width): Return right away if nfiles == 0.

2006-06-25  Jim Meyering  <jim@meyering.net>

	* NEWS: wc accepts a new option --files0-from=FILE, where FILE
	contains a list of NUL-separated file names.

	* src/wc.c: Include "readtokens.h".
	(usage): Describe the new option, and adjust the `Usage':
	with this option, no FILE may be specified on the command line.
	(main): Handle the new option.
	* tests/misc/wc-files0: New tests, for the above.
	* tests/misc/wc-files0-from: Likewise.
	* tests/misc/Makefile.am (TESTS): Add wc-files0.

2006-06-24  Jim Meyering  <jim@meyering.net>

	* src/md5sum.c (DIGEST_BUFFER): Remove now-unused definitions.

2006-06-22  Jim Meyering  <jim@meyering.net>

	* src/tee.c (tee_files): Rename from tee, to avoid conflict with
	the function in glibc's <fcntl.h>.  Reported by Andreas Schwab.

2006-06-19  Jim Meyering  <jim@meyering.net>

	* Makefile.cfg (local-checks-to-skip): Add changelog-check,
	so this check is not run as part of "make distcheck".

2006-06-18  Bob Proulx  <bob@proulx.com>  (tiny change)

	* tests/misc/pwd-long: Fix typo (s/neq/ne/) in previous change.

2006-06-18  Jim Meyering  <jim@meyering.net>

	* tests/misc/pwd-long: Make error output a little clearer.

2006-06-17  Jim Meyering  <jim@meyering.net>

	* tests/rm/inaccessible: Skip this test on systems without openat
	support.  Reported by Bob Proulx.

2006-06-15  Bob Proulx  <bob@proulx.com>  (tiny change)
